front-gateway/src/components/Search/style/search.scss
.search-container {
  background-color: $gray-lighter;
  height: 100%;
  position: relative;

  @media (min-width: $screen-md-min) {
    overflow: auto;
  }
}

.search-scroll-up {
  display: none;
  position: fixed;
  right: 125px;
  top: 80px;

  &::after {
    content: '\f102';
    font-family: FontAwesome;
    margin-right: 5px;
  }

  &.search-scroll-up-show {
    display: block;

    @media (max-width: $screen-sm-max) {
      display: none;
    }
  }
}

.search-results-wrapper {
  background-color: $gray-lighter;
  padding-top: 39px;

  @media (min-width: $screen-md-min) {
    bottom: 0;
    left: 0;
    position: absolute;
    right: 361px;
    top: 0;
  }

  .search-results-container {
    background-color: $gray-lighter;
  }

  .loader-container {
    top: -39px;
  }
}

.search-results-not-found {
  font-size: 15px;
  text-align: center;
  padding: 20px 0;

  @media (min-width: $screen-md-min) {
    padding: 300px 0;
  }
}

.search-results-not-found-title {
  font-size: 17px;
}

